package org.example.schoolmanagementsystemspring.school.entity;

/**
 * @author FFreitas
 * <a href="https://www.linkedin.com/in/francisco-freitas-a289b91b3/">LinkedIn</a>
 * <a href="https://github.com/FFreitas997/">Github</a>
 */
public enum SchoolType {
    PRIMARY,
    SECONDARY,
    HIGH_SCHOOL,
    UNIVERSITY,
    OTHER
}
