package org.example.schoolmanagementsystemspring.student;

/**
 * @author FFreitas
 * <a href="https://www.linkedin.com/in/francisco-freitas-a289b91b3/">LinkedIn</a>
 * <a href="https://github.com/FFreitas997/">Github</a>
 */
public enum GradeLevel {
    FIRST_GRADE,
    SECOND_GRADE,
    THIRD_GRADE,
    FOURTH_GRADE,
    FIFTH_GRADE,
    SIXTH_GRADE,
    SEVENTH_GRADE,
    EIGHTH_GRADE,
    NINTH_GRADE,
    TENTH_GRADE,
    ELEVENTH_GRADE,
    TWELFTH_GRADE
}
